# battery-box-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: api.md
examples/: read_status.py
src/battery_box_sdk/: __init__.py  _logging.py  client.py  config.py  errors.py
src/battery_box_sdk/domain/: __init__.py  models.py  soh.py
src/battery_box_sdk/protocol/: __init__.py  commands.py  frames.py
src/battery_box_sdk/protocol/parsers/: __init__.py  alarm.py  battery.py  charger.py
src/battery_box_sdk/services/: __init__.py  battery_box_service.py
src/battery_box_sdk/transport/: __init__.py  abc.py  crc.py  packet.py  rs485.py
tests/: test_crc.py  test_models.py  test_packet.py  test_parsers.py  test_soh.py
