[project]
name = "battery-box-sdk"
version = "0.1.0"
description = "Python SDK for reading battery box status over RS485"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Green Ideas Technology", email = "info@green-ideas.com.tw" },
]
dependencies = [
    "pyserial>=3.5",
]

[project.urls]
Repository = "https://github.com/Green-Ideas-Technology/battery-box-sdk"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/battery_box_sdk"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
